--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,11 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>UpTask</title>
+  <link rel="stylesheet" href="/src/assets/css/tailwind.css" />
+  <link rel="stylesheet" href="/src/assets/css/main.css" />
+  <link rel="icon" type="image/png" href="/favicon.png">
+  <link rel="icon" href="/favicon.ico" />
+  <title>Task || Crea proyectos y tareas</title>
 </head>
 
 <body class="bg-gray-100 min-h-screen">
